--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/VirtualRealityBP/Maps/MotionControllerMap.MotionControllerMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/testadjustments/myGameMode.myGameMode_C
+GlobalDefaultGameMode=/Game/Darts/Core/GameMode_darts.GameMode_darts_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.Engine]
@@ -18,6 +18,7 @@ GlobalDefaultServerGameMode=None
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_VirtualRealityBP",NewGameName="/Script/testingVR")
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/VRTemplate")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/VRTemplate")
+bSmoothFrameRate=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Mobile
@@ -51,7 +52,7 @@ r.ClearCoatNormal=False
 r.ReflectionCaptureResolution=128
 r.Mobile.ReflectionCaptureCompression=False
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
-r.ForwardShading=False
+r.ForwardShading=True
 r.VertexFoggingForOpaque=True
 r.AllowStaticLighting=True
 r.NormalMapsForStaticLighting=False
@@ -79,7 +80,7 @@ r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=False
 r.SSGI.Enable=False
-r.DefaultFeature.AntiAliasing=0
+r.DefaultFeature.AntiAliasing=3
 r.DefaultFeature.LightUnits=1
 r.DefaultBackBufferPixelFormat=4
 r.Shadow.UnbuiltPreviewInGame=True
@@ -100,7 +101,7 @@ r.MorphTarget.Mode=True
 r.GPUCrashDebugging=False
 vr.InstancedStereo=True
 r.MobileHDR=False
-vr.MobileMultiView=False
+vr.MobileMultiView=True
 r.Mobile.UseHWsRGBEncoding=True
 vr.RoundRobinOcclusion=False
 vr.ODSCapture=False
@@ -273,4 +274,7 @@ TextureFormatPriority_ASTC=0.900000
 SDKAPILevelOverride=
 NDKAPILevelOverride=
 bStreamLandscapeMeshLODs=False
+
+[/Script/OculusHMD.OculusHMDRuntimeSettings]
+HandTrackingSupport=ControllersAndHands
 
