--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C23EE1E74114FB973ACBE98E46FCB921
 ProjectName=Virtual Reality BP Game Template
+bStartInVR=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Development
@@ -25,3 +26,4 @@ bCookAll=False
 bCookMapsOnly=False
 bCompressed=False
 bSkipEditorContent=False
+
