Added Enumerations to the projects

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/testing/interactMap.interactMap
+EditorStartupMap=/Game/VirtualRealityBP/Maps/StartupMap.StartupMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -7,7 +7,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Darts/Core/GameInstances_Darts.GameInstances_Darts_C
 GameDefaultMap=/Game/VirtualRealityBP/Maps/MotionControllerMap.MotionControllerMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Darts/Core/GameMode_darts.GameMode_darts_C
